[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Popup" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Resume" type="Button" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -172.0
margin_right = 128.0
margin_bottom = -108.0
text = "RESUME"

[node name="Restart" type="Button" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -44.0
margin_right = 128.0
margin_bottom = 20.0
text = "RESTART"

[node name="Levels" type="Button" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 160.0
text = "LEVELS"

[connection signal="pressed" from="Popup/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Popup/Levels" to="." method="_on_Levels_pressed"]
